[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menu/MenuEffect.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/connection_ii/ConnectionII.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/Medieval Castle [1920x1080].jpg" type="Texture" id=3]
[ext_resource path="res://assets/font/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/cmu-typewriter/Typewriter.tres" type="DynamicFont" id=5]
[ext_resource path="res://Menu/Menu_layer.gd" type="Script" id=6]
[ext_resource path="res://Menu/Fps_label.tscn" type="PackedScene" id=7]
[ext_resource path="res://Menu/Settings.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=3]
resource_name = "Appearing"
length = 0.68
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.68 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.968627 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Fading"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Button_system:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 0.968627 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Current_scene" type="Node2D" parent="."]

[node name="Scene" type="CenterContainer" parent="Current_scene"]
margin_right = 22.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Current_scene"]
position = Vector2( 573.307, 328.898 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Current_scene"]
anchor_left = 0.496
anchor_top = 0.177
anchor_right = 0.496
anchor_bottom = 0.177
margin_left = 365.375
margin_top = 65.0538
margin_right = 650.375
margin_bottom = 166.054
custom_colors/font_color = Color( 0.415686, 0.329412, 0.239216, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.52549, 0.0196078, 0.0196078, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Fallen Age"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
root_node = NodePath("../..")
autoplay = "Appearing"
anims/Appearing = SubResource( 3 )
anims/Fading = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Button_system" type="VBoxContainer" parent="."]
margin_left = 49.2213
margin_top = 449.818
margin_right = 146.221
margin_bottom = 550.818
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Button_system"]
margin_right = 100.0
margin_bottom = 31.0
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../TutorialButton")
custom_colors/font_color_focus = Color( 0.945098, 0.0509804, 0.0509804, 1 )
custom_colors/font_color = Color( 0.988235, 0.972549, 0.972549, 1 )
custom_colors/font_color_pressed = Color( 0.0352941, 0.243137, 0.956863, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Start"
flat = true
align = 0

[node name="TutorialButton" type="Button" parent="Button_system"]
margin_top = 35.0
margin_right = 100.0
margin_bottom = 66.0
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../SettingButton")
custom_colors/font_color_focus = Color( 0.0470588, 0.941176, 0.235294, 1 )
custom_colors/font_color = Color( 0.988235, 0.972549, 0.972549, 1 )
custom_colors/font_color_pressed = Color( 0.0352941, 0.243137, 0.956863, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Tutorial"
flat = true
align = 0

[node name="SettingButton" type="Button" parent="Button_system"]
margin_top = 70.0
margin_right = 100.0
margin_bottom = 101.0
focus_neighbour_top = NodePath("../TutorialButton")
focus_neighbour_bottom = NodePath("../ExitButton")
custom_colors/font_color_focus = Color( 0.568627, 0.0235294, 0.941176, 1 )
custom_colors/font_color = Color( 0.988235, 0.972549, 0.972549, 1 )
custom_colors/font_color_pressed = Color( 0.0352941, 0.243137, 0.956863, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Setting"
flat = true
align = 0

[node name="ExitButton" type="Button" parent="Button_system"]
margin_top = 105.0
margin_right = 100.0
margin_bottom = 136.0
focus_neighbour_top = NodePath("../SettingButton")
focus_neighbour_bottom = NodePath("../StartButton")
custom_colors/font_color_focus = Color( 0.776471, 0.92549, 0.0627451, 1 )
custom_colors/font_color = Color( 0.988235, 0.972549, 0.972549, 1 )
custom_colors/font_color_pressed = Color( 0.0352941, 0.243137, 0.956863, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Exit"
flat = true
align = 0

[node name="Fps_display" parent="." instance=ExtResource( 7 )]
visible = false

[node name="SettingsMenu" parent="." instance=ExtResource( 8 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="play" from="." to="CanvasLayer" method="_on_Menu_play"]
[connection signal="tu" from="." to="CanvasLayer" method="_on_Menu_tu"]
[connection signal="trans" from="CanvasLayer" to="." method="_on_CanvasLayer_trans"]
[connection signal="transitioned" from="CanvasLayer" to="." method="_on_CanvasLayer_transitioned"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="CanvasLayer" method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Button_system/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Button_system/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="Button_system/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="Button_system/ExitButton" to="." method="_on_ExitButton_pressed"]
